Bug 1555240 - Remove unnecessary macOS scrollbar rule. r=bgrins
Differential Revision: https://phabricator.services.mozilla.com/D32954

UltraBlame original commit: b33cfaa24138bd3bd1e167f1736fb6ba0b20d473

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -362,50 +362,3 @@ color
 white
 ;
 }
-media
-print
-{
-html
-|
-div
-scrollbar
-{
--
-moz
--
-appearance
-:
-scrollbar
-;
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-general
-.
-xml
-#
-empty
-"
-)
-;
-cursor
-:
-default
-;
-}
-}
